objects/Payments__x.object
<CustomObject>
    <fields>
        <fullName>Account_Connector__c</fullName>
        <externalDeveloperName>userID</externalDeveloperName>
        <label>Account Connector</label>
        <length>18</length>
        <referenceTargetField>Account.Payment_Connector__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <description>amount</description>
        <externalDeveloperName>amount</externalDeveloperName>
        <label>amount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>datePaid__c</fullName>
        <description>datePaid</description>
        <externalDeveloperName>datePaid</externalDeveloperName>
        <label>datePaid</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dateRequested__c</fullName>
        <description>dateRequested</description>
        <externalDeveloperName>dateRequested</externalDeveloperName>
        <label>dateRequested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mechanismID__c</fullName>
        <description>mechanismID</description>
        <externalDeveloperName>mechanismID</externalDeveloperName>
        <label>mechanismID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>status</description>
        <externalDeveloperName>status</externalDeveloperName>
        <label>status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userID__c</fullName>
        <description>userID</description>
        <externalDeveloperName>userID</externalDeveloperName>
        <label>userID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Payments</description>
    <externalDataSource>OrderDB</externalDataSource>
    <externalName>Payments</externalName>
    <label>Payments</label>
    <pluralLabel>Payments</pluralLabel>
</CustomObject>